y.output
State 23 conflicts: 15 shift/reduce
State 29 conflicts: 1 shift/reduce
State 40 conflicts: 1 shift/reduce
State 45 conflicts: 1 shift/reduce
State 60 conflicts: 23 reduce/reduce
State 64 conflicts: 1 shift/reduce
State 77 conflicts: 1 shift/reduce
State 81 conflicts: 15 shift/reduce
State 149 conflicts: 1 shift/reduce
State 162 conflicts: 15 shift/reduce
State 163 conflicts: 15 shift/reduce
State 164 conflicts: 2 shift/reduce
State 165 conflicts: 2 shift/reduce
State 166 conflicts: 2 shift/reduce
State 167 conflicts: 2 shift/reduce
State 168 conflicts: 2 shift/reduce
State 169 conflicts: 2 shift/reduce
State 170 conflicts: 2 shift/reduce
State 171 conflicts: 2 shift/reduce
State 172 conflicts: 2 shift/reduce
State 173 conflicts: 2 shift/reduce
State 174 conflicts: 2 shift/reduce
State 175 conflicts: 2 shift/reduce
State 176 conflicts: 2 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: GlobalStatementList

    2 GlobalStatementList: GlobalStatementList GlobalStatement
    3                    | GlobalStatement

    4 GlobalStatement: Function_DeclarationStmt

    5 Function_DeclarationStmt: Function_Declaration FuncBlock

    6 Function_Declaration: Function_Open Function_Sig

    7 FuncBlock: '{' StatementList '}'
    8          | '{' '}'

    9 Function_Sig: '(' ')'
   10             | '(' ')' ARROW Type
   11             | '(' Parameter_List ')'
   12             | '(' Parameter_List ')' ARROW Type

   13 Function_Open: FUNC ID

   14 Type: INT
   15     | FLOAT
   16     | BOOL
   17     | STR
   18     | '&' Type
   19     | '[' Type ';' Expression ']'

   20 Dotdot: DOTDOT

   21 Operand: Ident
   22        | Literal
   23        | '(' Expression ')'

   24 Unary_Op: '-'
   25         | '!'

   26 Assign_Op: '='
   27          | ADD_ASSIGN
   28          | SUB_ASSIGN
   29          | MUL_ASSIGN
   30          | DIV_ASSIGN
   31          | REM_ASSIGN

   32 Ident: ID

   33 EnterBlock: '{'

   34 ExitBlock: '}'

   35 Block: EnterBlock StatementList ExitBlock
   36      | EnterBlock ExitBlock

   37 StatementList: StatementList Statement
   38              | Statement

   39 Statement: DeclarationStmt ';'
   40          | SimpleStmt ';'
   41          | ReturnStmt ';'
   42          | PrintStmt ';'
   43          | ';'
   44          | SimpleStmt
   45          | IfStmt
   46          | LoopExpression
   47          | Block

   48 SimpleStmt: AssignmentStmt
   49           | ExpressionStmt

   50 ExpressionStmt: Expression

   51 SimpleIfStmt: If Condition If_Jump Block

   52 IfStmt: SimpleIfStmt Else Block
   53       | SimpleIfStmt Else IfStmt
   54       | SimpleIfStmt

   55 If: IF

   56 If_Jump: %empty

   57 Else: ELSE

   58 Condition: Expression

   59 AssignmentStmt: ID Assign_Op Expression

   60 DeclarationStmt: LET ID ':' Type '=' Expression
   61                | LET MUT ID ':' Type '=' Expression
   62                | LET ID '=' Expression
   63                | LET MUT ID '=' Expression
   64                | LET ID ':' Type
   65                | LET MUT ID ':' Type

   66 ReturnStmt: RETURN
   67           | RETURN Expression

   68 PrintStmt: PRINT '(' Expression ')'
   69          | PRINTLN '(' Expression ')'

   70 Unary_Expression: Unary_Op Unary_Expression
   71                 | Primary_Expression

   72 BreakExpression: BREAK
   73                | BREAK Expression

   74 ArrayElements: Expression
   75              | ArrayElements ',' Expression

   76 ArrayExpression: '[' ']'
   77                | BeginArr ArrayElements ']'

   78 BeginArr: '['

   79 For_Label: FOR ID IN ID '{'

   80 For_Loop: For_Label ExitBlock
   81         | For_Label StatementList ExitBlock

   82 LoopExpression: WhileStmt
   83               | Loop Block
   84               | For_Loop

   85 Loop: LOOP

   86 WhileStmt: While Condition While_Jump Block

   87 While: WHILE

   88 While_Jump: %empty

   89 Expression: Unary_Expression
   90           | BreakExpression
   91           | ArrayExpression
   92           | LoopExpression
   93           | Expression LOR Expression
   94           | Expression LAND Expression
   95           | Expression '+' Expression
   96           | Expression '-' Expression
   97           | Expression '*' Expression
   98           | Expression '/' Expression
   99           | Expression '%' Expression
  100           | Expression '>' Expression
  101           | Expression '<' Expression
  102           | Expression GEQ Expression
  103           | Expression LEQ Expression
  104           | Expression EQL Expression
  105           | Expression NEQ Expression
  106           | Expression LSHIFT Expression
  107           | Expression RSHIFT Expression

  108 ArgumentList: Expression
  109             | ArgumentList ',' Expression

  110 Call_Expression: ID '(' ')'
  111                | ID '(' ArgumentList ')'

  112 Cast_Expression: Primary_Expression AS Type

  113 Index_Expression: Ident '[' Expression ']'

  114 Primary_Expression: Operand
  115                   | Cast_Expression
  116                   | Index_Expression
  117                   | Call_Expression
  118                   | '&' Ident '[' Expression Dotdot ']'
  119                   | '&' Ident '[' Dotdot Expression ']'
  120                   | '&' Ident '[' Expression Dotdot Expression ']'

  121 Literal: INT_LIT
  122        | FLOAT_LIT
  123        | '"' STRING_LIT '"'
  124        | Boolean_Literal
  125        | '"' '"'

  126 Boolean_Literal: TRUE
  127                | FALSE

  128 Parameter_List: ID ':' Type
  129               | MUT ID ':' Type
  130               | Parameter_List ',' ID ':' Type
  131               | Parameter_List ',' MUT ID ':' Type


Terminals, with rules where they appear

    $end (0) 0
    '!' <s_val> (33) 25
    '"' (34) 123 125
    '%' (37) 99
    '&' (38) 18 118 119 120
    '(' (40) 9 10 11 12 23 68 69 110 111
    ')' (41) 9 10 11 12 23 68 69 110 111
    '*' (42) 97
    '+' <s_val> (43) 95
    ',' (44) 75 109 130 131
    '-' <s_val> (45) 24 96
    '/' (47) 98
    ':' (58) 60 61 64 65 128 129 130 131
    ';' (59) 19 39 40 41 42 43
    '<' (60) 101
    '=' <s_val> (61) 26 60 61 62 63
    '>' (62) 100
    '[' (91) 19 76 78 113 118 119 120
    ']' (93) 19 76 77 113 118 119 120
    '{' (123) 7 8 33 79
    '}' (125) 7 8 34
    error (256)
    LET (258) 60 61 62 63 64 65
    MUT (259) 61 63 65 129 131
    ARROW (260) 10 12
    AS (261) 112
    IN (262) 79
    DOTDOT (263) 20
    TRUE (264) 126
    FALSE (265) 127
    RSHIFT (266) 107
    LSHIFT (267) 106
    FUNC (268) 13
    RETURN (269) 66 67
    STR (270) 17
    GEQ (271) 102
    LEQ (272) 103
    EQL (273) 104
    NEQ (274) 105
    LOR (275) 93
    LAND (276) 94
    IF (277) 55
    ELSE (278) 57
    FOR (279) 79
    WHILE (280) 87
    LOOP (281) 85
    BREAK (282) 72 73
    PRINT (283) 68
    PRINTLN (284) 69
    INT_LIT <i_val> (285) 121
    FLOAT_LIT <f_val> (286) 122
    STRING_LIT <s_val> (287) 123
    ID <s_val> (288) 13 32 59 60 61 62 63 64 65 79 110 111 128 129 130 131
    INT <s_val> (289) 14
    FLOAT <s_val> (290) 15
    BOOL <s_val> (291) 16
    ADD_ASSIGN <s_val> (292) 27
    SUB_ASSIGN <s_val> (293) 28
    MUL_ASSIGN <s_val> (294) 29
    DIV_ASSIGN <s_val> (295) 30
    REM_ASSIGN <s_val> (296) 31


Nonterminals, with rules where they appear

    $accept (62)
        on left: 0
    Program (63)
        on left: 1
        on right: 0
    GlobalStatementList (64)
        on left: 2 3
        on right: 1 2
    GlobalStatement (65)
        on left: 4
        on right: 2 3
    Function_DeclarationStmt (66)
        on left: 5
        on right: 4
    Function_Declaration <s_val> (67)
        on left: 6
        on right: 5
    FuncBlock (68)
        on left: 7 8
        on right: 5
    Function_Sig <s_val> (69)
        on left: 9 10 11 12
        on right: 6
    Function_Open <s_val> (70)
        on left: 13
        on right: 6
    Type <s_val> (71)
        on left: 14 15 16 17 18 19
        on right: 10 12 18 19 60 61 64 65 112 128 129 130 131
    Dotdot (72)
        on left: 20
        on right: 118 119 120
    Operand <s_val> (73)
        on left: 21 22 23
        on right: 114
    Unary_Op <s_val> (74)
        on left: 24 25
        on right: 70
    Assign_Op <s_val> (75)
        on left: 26 27 28 29 30 31
        on right: 59
    Ident <s_val> (76)
        on left: 32
        on right: 21 113 118 119 120
    EnterBlock (77)
        on left: 33
        on right: 35 36
    ExitBlock (78)
        on left: 34
        on right: 35 36 80 81
    Block (79)
        on left: 35 36
        on right: 47 51 52 83 86
    StatementList (80)
        on left: 37 38
        on right: 7 35 37 81
    Statement (81)
        on left: 39 40 41 42 43 44 45 46 47
        on right: 37 38
    SimpleStmt (82)
        on left: 48 49
        on right: 40 44
    ExpressionStmt (83)
        on left: 50
        on right: 49
    SimpleIfStmt (84)
        on left: 51
        on right: 52 53 54
    IfStmt (85)
        on left: 52 53 54
        on right: 45 53
    If (86)
        on left: 55
        on right: 51
    If_Jump <i_val> (87)
        on left: 56
        on right: 51
    Else (88)
        on left: 57
        on right: 52 53
    Condition (89)
        on left: 58
        on right: 51 86
    AssignmentStmt (90)
        on left: 59
        on right: 48
    DeclarationStmt (91)
        on left: 60 61 62 63 64 65
        on right: 39
    ReturnStmt (92)
        on left: 66 67
        on right: 41
    PrintStmt (93)
        on left: 68 69
        on right: 42
    Unary_Expression <s_val> (94)
        on left: 70 71
        on right: 70 89
    BreakExpression (95)
        on left: 72 73
        on right: 90
    ArrayElements (96)
        on left: 74 75
        on right: 75 77
    ArrayExpression (97)
        on left: 76 77
        on right: 91
    BeginArr (98)
        on left: 78
        on right: 77
    For_Label <i_val> (99)
        on left: 79
        on right: 80 81
    For_Loop <i_val> (100)
        on left: 80 81
        on right: 84
    LoopExpression (101)
        on left: 82 83 84
        on right: 46 92
    Loop <i_val> (102)
        on left: 85
        on right: 83
    WhileStmt (103)
        on left: 86
        on right: 82
    While <i_val> (104)
        on left: 87
        on right: 86
    While_Jump <i_val> (105)
        on left: 88
        on right: 86
    Expression <s_val> (106)
        on left: 89 90 91 92 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107
        on right: 19 23 50 58 59 60 61 62 63 67 68 69 73 74 75 93 94 95 96 97 98 99 100 101 102 103 104 105 106 107 108 109 113 118 119 120
    ArgumentList (107)
        on left: 108 109
        on right: 109 111
    Call_Expression <s_val> (108)
        on left: 110 111
        on right: 117
    Cast_Expression <s_val> (109)
        on left: 112
        on right: 115
    Index_Expression <s_val> (110)
        on left: 113
        on right: 116
    Primary_Expression <s_val> (111)
        on left: 114 115 116 117 118 119 120
        on right: 71 112
    Literal <s_val> (112)
        on left: 121 122 123 124 125
        on right: 22
    Boolean_Literal <b_val> (113)
        on left: 126 127
        on right: 124
    Parameter_List <s_val> (114)
        on left: 128 129 130 131
        on right: 11 12 130 131


State 0

    0 $accept: . Program $end

    FUNC  shift, and go to state 1

    Program                   go to state 2
    GlobalStatementList       go to state 3
    GlobalStatement           go to state 4
    Function_DeclarationStmt  go to state 5
    Function_Declaration      go to state 6
    Function_Open             go to state 7


State 1

   13 Function_Open: FUNC . ID

    ID  shift, and go to state 8


State 2

    0 $accept: Program . $end

    $end  shift, and go to state 9


State 3

    1 Program: GlobalStatementList .
    2 GlobalStatementList: GlobalStatementList . GlobalStatement

    FUNC  shift, and go to state 1

    $default  reduce using rule 1 (Program)

    GlobalStatement           go to state 10
    Function_DeclarationStmt  go to state 5
    Function_Declaration      go to state 6
    Function_Open             go to state 7


State 4

    3 GlobalStatementList: GlobalStatement .

    $default  reduce using rule 3 (GlobalStatementList)


State 5

    4 GlobalStatement: Function_DeclarationStmt .

    $default  reduce using rule 4 (GlobalStatement)


State 6

    5 Function_DeclarationStmt: Function_Declaration . FuncBlock

    '{'  shift, and go to state 11

    FuncBlock  go to state 12


State 7

    6 Function_Declaration: Function_Open . Function_Sig

    '('  shift, and go to state 13

    Function_Sig  go to state 14


State 8

   13 Function_Open: FUNC ID .

    $default  reduce using rule 13 (Function_Open)


State 9

    0 $accept: Program $end .

    $default  accept


State 10

    2 GlobalStatementList: GlobalStatementList GlobalStatement .

    $default  reduce using rule 2 (GlobalStatementList)


State 11

    7 FuncBlock: '{' . StatementList '}'
    8          | '{' . '}'

    LET        shift, and go to state 15
    TRUE       shift, and go to state 16
    FALSE      shift, and go to state 17
    RETURN     shift, and go to state 18
    IF         shift, and go to state 19
    FOR        shift, and go to state 20
    WHILE      shift, and go to state 21
    LOOP       shift, and go to state 22
    BREAK      shift, and go to state 23
    PRINT      shift, and go to state 24
    PRINTLN    shift, and go to state 25
    '-'        shift, and go to state 26
    INT_LIT    shift, and go to state 27
    FLOAT_LIT  shift, and go to state 28
    ID         shift, and go to state 29
    '!'        shift, and go to state 30
    '{'        shift, and go to state 31
    '}'        shift, and go to state 32
    '('        shift, and go to state 33
    '&'        shift, and go to state 34
    '['        shift, and go to state 35
    ';'        shift, and go to state 36
    '"'        shift, and go to state 37

    Operand             go to state 38
    Unary_Op            go to state 39
    Ident               go to state 40
    EnterBlock          go to state 41
    Block               go to state 42
    StatementList       go to state 43
    Statement           go to state 44
    SimpleStmt          go to state 45
    ExpressionStmt      go to state 46
    SimpleIfStmt        go to state 47
    IfStmt              go to state 48
    If                  go to state 49
    AssignmentStmt      go to state 50
    DeclarationStmt     go to state 51
    ReturnStmt          go to state 52
    PrintStmt           go to state 53
    Unary_Expression    go to state 54
    BreakExpression     go to state 55
    ArrayExpression     go to state 56
    BeginArr            go to state 57
    For_Label           go to state 58
    For_Loop            go to state 59
    LoopExpression      go to state 60
    Loop                go to state 61
    WhileStmt           go to state 62
    While               go to state 63
    Expression          go to state 64
    Call_Expression     go to state 65
    Cast_Expression     go to state 66
    Index_Expression    go to state 67
    Primary_Expression  go to state 68
    Literal             go to state 69
    Boolean_Literal     go to state 70


State 12

    5 Function_DeclarationStmt: Function_Declaration FuncBlock .

    $default  reduce using rule 5 (Function_DeclarationStmt)


State 13

    9 Function_Sig: '(' . ')'
   10             | '(' . ')' ARROW Type
   11             | '(' . Parameter_List ')'
   12             | '(' . Parameter_List ')' ARROW Type

    MUT  shift, and go to state 71
    ID   shift, and go to state 72
    ')'  shift, and go to state 73

    Parameter_List  go to state 74


State 14

    6 Function_Declaration: Function_Open Function_Sig .

    $default  reduce using rule 6 (Function_Declaration)


State 15

   60 DeclarationStmt: LET . ID ':' Type '=' Expression
   61                | LET . MUT ID ':' Type '=' Expression
   62                | LET . ID '=' Expression
   63                | LET . MUT ID '=' Expression
   64                | LET . ID ':' Type
   65                | LET . MUT ID ':' Type

    MUT  shift, and go to state 75
    ID   shift, and go to state 76


State 16

  126 Boolean_Literal: TRUE .

    $default  reduce using rule 126 (Boolean_Literal)


State 17

  127 Boolean_Literal: FALSE .

    $default  reduce using rule 127 (Boolean_Literal)


State 18

   66 ReturnStmt: RETURN .
   67           | RETURN . Expression

    TRUE       shift, and go to state 16
    FALSE      shift, and go to state 17
    FOR        shift, and go to state 20
    WHILE      shift, and go to state 21
    LOOP       shift, and go to state 22
    BREAK      shift, and go to state 23
    '-'        shift, and go to state 26
    INT_LIT    shift, and go to state 27
    FLOAT_LIT  shift, and go to state 28
    ID         shift, and go to state 77
    '!'        shift, and go to state 30
    '('        shift, and go to state 33
    '&'        shift, and go to state 34
    '['        shift, and go to state 35
    '"'        shift, and go to state 37

    $default  reduce using rule 66 (ReturnStmt)

    Operand             go to state 38
    Unary_Op            go to state 39
    Ident               go to state 40
    Unary_Expression    go to state 54
    BreakExpression     go to state 55
    ArrayExpression     go to state 56
    BeginArr            go to state 57
    For_Label           go to state 58
    For_Loop            go to state 59
    LoopExpression      go to state 78
    Loop                go to state 61
    WhileStmt           go to state 62
    While               go to state 63
    Expression          go to state 79
    Call_Expression     go to state 65
    Cast_Expression     go to state 66
    Index_Expression    go to state 67
    Primary_Expression  go to state 68
    Literal             go to state 69
    Boolean_Literal     go to state 70


State 19

   55 If: IF .

    $default  reduce using rule 55 (If)


State 20

   79 For_Label: FOR . ID IN ID '{'

    ID  shift, and go to state 80


State 21

   87 While: WHILE .

    $default  reduce using rule 87 (While)


State 22

   85 Loop: LOOP .

    $default  reduce using rule 85 (Loop)


State 23

   72 BreakExpression: BREAK .
   73                | BREAK . Expression

    TRUE       shift, and go to state 16
    FALSE      shift, and go to state 17
    FOR        shift, and go to state 20
    WHILE      shift, and go to state 21
    LOOP       shift, and go to state 22
    BREAK      shift, and go to state 23
    '-'        shift, and go to state 26
    INT_LIT    shift, and go to state 27
    FLOAT_LIT  shift, and go to state 28
    ID         shift, and go to state 77
    '!'        shift, and go to state 30
    '('        shift, and go to state 33
    '&'        shift, and go to state 34
    '['        shift, and go to state 35
    '"'        shift, and go to state 37

    TRUE       [reduce using rule 72 (BreakExpression)]
    FALSE      [reduce using rule 72 (BreakExpression)]
    FOR        [reduce using rule 72 (BreakExpression)]
    WHILE      [reduce using rule 72 (BreakExpression)]
    LOOP       [reduce using rule 72 (BreakExpression)]
    BREAK      [reduce using rule 72 (BreakExpression)]
    '-'        [reduce using rule 72 (BreakExpression)]
    INT_LIT    [reduce using rule 72 (BreakExpression)]
    FLOAT_LIT  [reduce using rule 72 (BreakExpression)]
    ID         [reduce using rule 72 (BreakExpression)]
    '!'        [reduce using rule 72 (BreakExpression)]
    '('        [reduce using rule 72 (BreakExpression)]
    '&'        [reduce using rule 72 (BreakExpression)]
    '['        [reduce using rule 72 (BreakExpression)]
    '"'        [reduce using rule 72 (BreakExpression)]
    $default   reduce using rule 72 (BreakExpression)

    Operand             go to state 38
    Unary_Op            go to state 39
    Ident               go to state 40
    Unary_Expression    go to state 54
    BreakExpression     go to state 55
    ArrayExpression     go to state 56
    BeginArr            go to state 57
    For_Label           go to state 58
    For_Loop            go to state 59
    LoopExpression      go to state 78
    Loop                go to state 61
    WhileStmt           go to state 62
    While               go to state 63
    Expression          go to state 81
    Call_Expression     go to state 65
    Cast_Expression     go to state 66
    Index_Expression    go to state 67
    Primary_Expression  go to state 68
    Literal             go to state 69
    Boolean_Literal     go to state 70


State 24

   68 PrintStmt: PRINT . '(' Expression ')'

    '('  shift, and go to state 82


State 25

   69 PrintStmt: PRINTLN . '(' Expression ')'

    '('  shift, and go to state 83


State 26

   24 Unary_Op: '-' .

    $default  reduce using rule 24 (Unary_Op)


State 27

  121 Literal: INT_LIT .

    $default  reduce using rule 121 (Literal)


State 28

  122 Literal: FLOAT_LIT .

    $default  reduce using rule 122 (Literal)


State 29

   32 Ident: ID .
   59 AssignmentStmt: ID . Assign_Op Expression
  110 Call_Expression: ID . '(' ')'
  111                | ID . '(' ArgumentList ')'

    ADD_ASSIGN  shift, and go to state 84
    SUB_ASSIGN  shift, and go to state 85
    MUL_ASSIGN  shift, and go to state 86
    DIV_ASSIGN  shift, and go to state 87
    REM_ASSIGN  shift, and go to state 88
    '='         shift, and go to state 89
    '('         shift, and go to state 90

    '('       [reduce using rule 32 (Ident)]
    $default  reduce using rule 32 (Ident)

    Assign_Op  go to state 91


State 30

   25 Unary_Op: '!' .

    $default  reduce using rule 25 (Unary_Op)


State 31

   33 EnterBlock: '{' .

    $default  reduce using rule 33 (EnterBlock)


State 32

    8 FuncBlock: '{' '}' .

    $default  reduce using rule 8 (FuncBlock)


State 33

   23 Operand: '(' . Expression ')'

    TRUE       shift, and go to state 16
    FALSE      shift, and go to state 17
    FOR        shift, and go to state 20
    WHILE      shift, and go to state 21
    LOOP       shift, and go to state 22
    BREAK      shift, and go to state 23
    '-'        shift, and go to state 26
    INT_LIT    shift, and go to state 27
    FLOAT_LIT  shift, and go to state 28
    ID         shift, and go to state 77
    '!'        shift, and go to state 30
    '('        shift, and go to state 33
    '&'        shift, and go to state 34
    '['        shift, and go to state 35
    '"'        shift, and go to state 37

    Operand             go to state 38
    Unary_Op            go to state 39
    Ident               go to state 40
    Unary_Expression    go to state 54
    BreakExpression     go to state 55
    ArrayExpression     go to state 56
    BeginArr            go to state 57
    For_Label           go to state 58
    For_Loop            go to state 59
    LoopExpression      go to state 78
    Loop                go to state 61
    WhileStmt           go to state 62
    While               go to state 63
    Expression          go to state 92
    Call_Expression     go to state 65
    Cast_Expression     go to state 66
    Index_Expression    go to state 67
    Primary_Expression  go to state 68
    Literal             go to state 69
    Boolean_Literal     go to state 70


State 34

  118 Primary_Expression: '&' . Ident '[' Expression Dotdot ']'
  119                   | '&' . Ident '[' Dotdot Expression ']'
  120                   | '&' . Ident '[' Expression Dotdot Expression ']'

    ID  shift, and go to state 93

    Ident  go to state 94


State 35

   76 ArrayExpression: '[' . ']'
   78 BeginArr: '[' .

    ']'  shift, and go to state 95

    $default  reduce using rule 78 (BeginArr)


State 36

   43 Statement: ';' .

    $default  reduce using rule 43 (Statement)


State 37

  123 Literal: '"' . STRING_LIT '"'
  125        | '"' . '"'

    STRING_LIT  shift, and go to state 96
    '"'         shift, and go to state 97


State 38

  114 Primary_Expression: Operand .

    $default  reduce using rule 114 (Primary_Expression)


State 39

   70 Unary_Expression: Unary_Op . Unary_Expression

    TRUE       shift, and go to state 16
    FALSE      shift, and go to state 17
    '-'        shift, and go to state 26
    INT_LIT    shift, and go to state 27
    FLOAT_LIT  shift, and go to state 28
    ID         shift, and go to state 77
    '!'        shift, and go to state 30
    '('        shift, and go to state 33
    '&'        shift, and go to state 34
    '"'        shift, and go to state 37

    Operand             go to state 38
    Unary_Op            go to state 39
    Ident               go to state 40
    Unary_Expression    go to state 98
    Call_Expression     go to state 65
    Cast_Expression     go to state 66
    Index_Expression    go to state 67
    Primary_Expression  go to state 68
    Literal             go to state 69
    Boolean_Literal     go to state 70


State 40

   21 Operand: Ident .
  113 Index_Expression: Ident . '[' Expression ']'

    '['  shift, and go to state 99

    '['       [reduce using rule 21 (Operand)]
    $default  reduce using rule 21 (Operand)


State 41

   35 Block: EnterBlock . StatementList ExitBlock
   36      | EnterBlock . ExitBlock

    LET        shift, and go to state 15
    TRUE       shift, and go to state 16
    FALSE      shift, and go to state 17
    RETURN     shift, and go to state 18
    IF         shift, and go to state 19
    FOR        shift, and go to state 20
    WHILE      shift, and go to state 21
    LOOP       shift, and go to state 22
    BREAK      shift, and go to state 23
    PRINT      shift, and go to state 24
    PRINTLN    shift, and go to state 25
    '-'        shift, and go to state 26
    INT_LIT    shift, and go to state 27
    FLOAT_LIT  shift, and go to state 28
    ID         shift, and go to state 29
    '!'        shift, and go to state 30
    '{'        shift, and go to state 31
    '}'        shift, and go to state 100
    '('        shift, and go to state 33
    '&'        shift, and go to state 34
    '['        shift, and go to state 35
    ';'        shift, and go to state 36
    '"'        shift, and go to state 37

    Operand             go to state 38
    Unary_Op            go to state 39
    Ident               go to state 40
    EnterBlock          go to state 41
    ExitBlock           go to state 101
    Block               go to state 42
    StatementList       go to state 102
    Statement           go to state 44
    SimpleStmt          go to state 45
    ExpressionStmt      go to state 46
    SimpleIfStmt        go to state 47
    IfStmt              go to state 48
    If                  go to state 49
    AssignmentStmt      go to state 50
    DeclarationStmt     go to state 51
    ReturnStmt          go to state 52
    PrintStmt           go to state 53
    Unary_Expression    go to state 54
    BreakExpression     go to state 55
    ArrayExpression     go to state 56
    BeginArr            go to state 57
    For_Label           go to state 58
    For_Loop            go to state 59
    LoopExpression      go to state 60
    Loop                go to state 61
    WhileStmt           go to state 62
    While               go to state 63
    Expression          go to state 64
    Call_Expression     go to state 65
    Cast_Expression     go to state 66
    Index_Expression    go to state 67
    Primary_Expression  go to state 68
    Literal             go to state 69
    Boolean_Literal     go to state 70


State 42

   47 Statement: Block .

    $default  reduce using rule 47 (Statement)


State 43

    7 FuncBlock: '{' StatementList . '}'
   37 StatementList: StatementList . Statement

    LET        shift, and go to state 15
    TRUE       shift, and go to state 16
    FALSE      shift, and go to state 17
    RETURN     shift, and go to state 18
    IF         shift, and go to state 19
    FOR        shift, and go to state 20
    WHILE      shift, and go to state 21
    LOOP       shift, and go to state 22
    BREAK      shift, and go to state 23
    PRINT      shift, and go to state 24
    PRINTLN    shift, and go to state 25
    '-'        shift, and go to state 26
    INT_LIT    shift, and go to state 27
    FLOAT_LIT  shift, and go to state 28
    ID         shift, and go to state 29
    '!'        shift, and go to state 30
    '{'        shift, and go to state 31
    '}'        shift, and go to state 103
    '('        shift, and go to state 33
    '&'        shift, and go to state 34
    '['        shift, and go to state 35
    ';'        shift, and go to state 36
    '"'        shift, and go to state 37

    Operand             go to state 38
    Unary_Op            go to state 39
    Ident               go to state 40
    EnterBlock          go to state 41
    Block               go to state 42
    Statement           go to state 104
    SimpleStmt          go to state 45
    ExpressionStmt      go to state 46
    SimpleIfStmt        go to state 47
    IfStmt              go to state 48
    If                  go to state 49
    AssignmentStmt      go to state 50
    DeclarationStmt     go to state 51
    ReturnStmt          go to state 52
    PrintStmt           go to state 53
    Unary_Expression    go to state 54
    BreakExpression     go to state 55
    ArrayExpression     go to state 56
    BeginArr            go to state 57
    For_Label           go to state 58
    For_Loop            go to state 59
    LoopExpression      go to state 60
    Loop                go to state 61
    WhileStmt           go to state 62
    While               go to state 63
    Expression          go to state 64
    Call_Expression     go to state 65
    Cast_Expression     go to state 66
    Index_Expression    go to state 67
    Primary_Expression  go to state 68
    Literal             go to state 69
    Boolean_Literal     go to state 70


State 44

   38 StatementList: Statement .

    $default  reduce using rule 38 (StatementList)


State 45

   40 Statement: SimpleStmt . ';'
   44          | SimpleStmt .

    ';'  shift, and go to state 105

    ';'       [reduce using rule 44 (Statement)]
    $default  reduce using rule 44 (Statement)


State 46

   49 SimpleStmt: ExpressionStmt .

    $default  reduce using rule 49 (SimpleStmt)


State 47

   52 IfStmt: SimpleIfStmt . Else Block
   53       | SimpleIfStmt . Else IfStmt
   54       | SimpleIfStmt .

    ELSE  shift, and go to state 106

    $default  reduce using rule 54 (IfStmt)

    Else  go to state 107


State 48

   45 Statement: IfStmt .

    $default  reduce using rule 45 (Statement)


State 49

   51 SimpleIfStmt: If . Condition If_Jump Block

    TRUE       shift, and go to state 16
    FALSE      shift, and go to state 17
    FOR        shift, and go to state 20
    WHILE      shift, and go to state 21
    LOOP       shift, and go to state 22
    BREAK      shift, and go to state 23
    '-'        shift, and go to state 26
    INT_LIT    shift, and go to state 27
    FLOAT_LIT  shift, and go to state 28
    ID         shift, and go to state 77
    '!'        shift, and go to state 30
    '('        shift, and go to state 33
    '&'        shift, and go to state 34
    '['        shift, and go to state 35
    '"'        shift, and go to state 37

    Operand             go to state 38
    Unary_Op            go to state 39
    Ident               go to state 40
    Condition           go to state 108
    Unary_Expression    go to state 54
    BreakExpression     go to state 55
    ArrayExpression     go to state 56
    BeginArr            go to state 57
    For_Label           go to state 58
    For_Loop            go to state 59
    LoopExpression      go to state 78
    Loop                go to state 61
    WhileStmt           go to state 62
    While               go to state 63
    Expression          go to state 109
    Call_Expression     go to state 65
    Cast_Expression     go to state 66
    Index_Expression    go to state 67
    Primary_Expression  go to state 68
    Literal             go to state 69
    Boolean_Literal     go to state 70


State 50

   48 SimpleStmt: AssignmentStmt .

    $default  reduce using rule 48 (SimpleStmt)


State 51

   39 Statement: DeclarationStmt . ';'

    ';'  shift, and go to state 110


State 52

   41 Statement: ReturnStmt . ';'

    ';'  shift, and go to state 111


State 53

   42 Statement: PrintStmt . ';'

    ';'  shift, and go to state 112


State 54

   89 Expression: Unary_Expression .

    $default  reduce using rule 89 (Expression)


State 55

   90 Expression: BreakExpression .

    $default  reduce using rule 90 (Expression)


State 56

   91 Expression: ArrayExpression .

    $default  reduce using rule 91 (Expression)


State 57

   77 ArrayExpression: BeginArr . ArrayElements ']'

    TRUE       shift, and go to state 16
    FALSE      shift, and go to state 17
    FOR        shift, and go to state 20
    WHILE      shift, and go to state 21
    LOOP       shift, and go to state 22
    BREAK      shift, and go to state 23
    '-'        shift, and go to state 26
    INT_LIT    shift, and go to state 27
    FLOAT_LIT  shift, and go to state 28
    ID         shift, and go to state 77
    '!'        shift, and go to state 30
    '('        shift, and go to state 33
    '&'        shift, and go to state 34
    '['        shift, and go to state 35
    '"'        shift, and go to state 37

    Operand             go to state 38
    Unary_Op            go to state 39
    Ident               go to state 40
    Unary_Expression    go to state 54
    BreakExpression     go to state 55
    ArrayElements       go to state 113
    ArrayExpression     go to state 56
    BeginArr            go to state 57
    For_Label           go to state 58
    For_Loop            go to state 59
    LoopExpression      go to state 78
    Loop                go to state 61
    WhileStmt           go to state 62
    While               go to state 63
    Expression          go to state 114
    Call_Expression     go to state 65
    Cast_Expression     go to state 66
    Index_Expression    go to state 67
    Primary_Expression  go to state 68
    Literal             go to state 69
    Boolean_Literal     go to state 70


State 58

   80 For_Loop: For_Label . ExitBlock
   81         | For_Label . StatementList ExitBlock

    LET        shift, and go to state 15
    TRUE       shift, and go to state 16
    FALSE      shift, and go to state 17
    RETURN     shift, and go to state 18
    IF         shift, and go to state 19
    FOR        shift, and go to state 20
    WHILE      shift, and go to state 21
    LOOP       shift, and go to state 22
    BREAK      shift, and go to state 23
    PRINT      shift, and go to state 24
    PRINTLN    shift, and go to state 25
    '-'        shift, and go to state 26
    INT_LIT    shift, and go to state 27
    FLOAT_LIT  shift, and go to state 28
    ID         shift, and go to state 29
    '!'        shift, and go to state 30
    '{'        shift, and go to state 31
    '}'        shift, and go to state 100
    '('        shift, and go to state 33
    '&'        shift, and go to state 34
    '['        shift, and go to state 35
    ';'        shift, and go to state 36
    '"'        shift, and go to state 37
